# s3-controller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
deployment/minio/: README.md  deploy.sh  local_container.sh  network-policy.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
resources/: empty_env
src/s3_controller/: __init__.py
tests/: test.py
