[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3-controller"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "minio"
]
authors = [{name = "Oak Ridge National Laboratory"}]
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[tool.hatch]
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_controller"]
